Add references page

--- a/layouts/partials/sections/header.html
+++ b/layouts/partials/sections/header.html
@@ -178,15 +178,22 @@
                     
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="{{ .Site.BaseURL | relURL }}certificates"
-                            aria-label="contact">
+                            aria-label="certificates">
                             Certificates
                         </a>
                     </li>
                     
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="{{ .Site.BaseURL | relURL }}projects"
-                            aria-label="contact">
+                            aria-label="projects">
                             Projects
+                        </a>
+                    </li>
+                    
+                    <li class="nav-item navbar-text">
+                        <a class="nav-link" href="{{ .Site.BaseURL | relURL }}references"
+                            aria-label="references">
+                            References
                         </a>
                     </li>
 
