Add certificates and experience page

--- a/layouts/partials/sections/header.html
+++ b/layouts/partials/sections/header.html
@@ -177,9 +177,9 @@
                     {{end}}
                     
                     <li class="nav-item navbar-text">
-                        <a class="nav-link" href="{{ .Site.BaseURL | relURL }}certificates"
-                            aria-label="certificates">
-                            Certificates
+                        <a class="nav-link" href="{{ .Site.BaseURL | relURL }}experience"
+                            aria-label="experience">
+                            Experience
                         </a>
                     </li>
                     
