Moved assignemnts and projects sections

--- a/layouts/partials/sections/header.html
+++ b/layouts/partials/sections/header.html
@@ -184,9 +184,9 @@
                     </li>
                     
                     <li class="nav-item navbar-text">
-                        <a class="nav-link" href="{{ .Site.BaseURL | relURL }}projects"
-                            aria-label="projects">
-                            Projects
+                        <a class="nav-link" href="{{ .Site.BaseURL | relURL }}assignments"
+                            aria-label="assignments">
+                            Assignments
                         </a>
                     </li>
                     
